--- a/index.html
+++ b/index.html
@@ -13,85 +13,97 @@
 <h1>CSS-Snippet Cheatsheet</h1>
 <p>Ever have trouble recalling the exact syntax for your favorite CSS code? Give it a permanent home and add it to this page! Select any snippet bellow and it will automatically select all of the code for you to copy.</p>
     </header>
-    <main >
-<section>
-<h2>Flex Row</h2>
+
+    <main class="flex">
+
+<section class="card">
+<h2  class="card-title">Flex Row</h2>
 <p>Use these three properties to create a Flexbox row layout</p>
-<pre>
-    <code>  
-        .row {
-            display:flex;
-            flex-direction: row;
-            flex-wrap:wrap;
-         }            
-    </code>
-</pre>
+<pre><code>
+            .row {
+              display:flex;
+              flex-direction: row;
+              flex-wrap:wrap;
+             }       
+        </code>      
+</pre> 
 </section>
 
-<section>
-    <h2>Flexboc Column</h2>
+<section class="card">
+    <h2  class="card-title">Flexbox Column</h2>
     <p>Use this to create a Flexbox column layout.</p>
-        <code>
+    <pre><code>
             .row {
                 display:flex;
                 flex-direction: row;
                 flex-wrap:wrap;
              }           
         </code>
-    </section>
+    </pre>
+</section>
 
-    <section>
-        <h2>Css Grid Layout</h2>
+    <section class="card">
+        <h2  class="card-title">Css Grid Layout</h2>
         <p>Build a 12-column layout using CSS Grid.</p>
-            <code>                         
- .grid {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 
-    repeat(12,1fr); 
- }             
-            </code>
+        <pre>
+            <code> 
+            .grid {
+                display: grid;
+                width: 100%;
+                grid-template-columns: 
+                repeat(12,1fr); 
+             }             
+                        </code>
+        </pre>
         </section>
 
-        <section>
-            <h2>Liner gradient</h2>
+        <section class="card">
+            <h2  class="card-title">Liner Gradient</h2>
             <p>This will create a background linear gradient from top to bottom.</p>
+            <pre>
                 <code>                         
-                    .linear-gradient-background{
-                        background-image: linear- 
-                        gradient(
-                        rgba(232, 102, 236, 0.3)0%, 
-                        rgba(232, 102, 236, 0.6)100% 
-                     ); 
+                .linear-gradient-background{
+                    background-image: linear- 
+                    gradient(
+                    rgba(232, 102, 236, 0.3)0%, 
+                    rgba(232, 102, 236, 0.6)100% 
+                 ); 
                     }      
                 </code>
+            </pre>
             </section>
 
-            <section>
-                <h2>Box Transition</h2>
+            <section class="card">
+                <h2 class="card-title">Box Transition</h2>
                 <p>Use transition and box shadows to glow.</p>
+                <pre>
                     <code>             
- .code-card .card-header {
-    border-radius:8;
-    transition: all 0.5s ease-in-
-    out; }
-    .code-card:hover 
-    .code-card:hover .card-header{ 
-    box-shadow: inset 0px 0px 8px 
-    rgba(232, 102, 236, 1), 0 0 15px 
-    rgba(232, 102, 236,1) ; } 
-                    </code>
+                .code-card .card-header {
+                    border-radius:8;
+                    transition: all 0.5s ease-in-
+                    out; }
+
+                .code-card:hover 
+                 .code-card:hover .card-header{ 
+                    box-shadow: inset 0px 0px 8px 
+                    rgba(232, 102, 236, 1), 0 0 15px 
+                    rgba(232, 102, 236,1) ;
+                     } 
+                                           </code>
+                 </pre>
                 </section>
 
-                <section>
-                    <h2>Overlay Card with Title</h2>
+                <section class="card">
+                    <h2 class="card-title">Overlay Card with Title</h2>
                     <p>Use position properties and negative margins to raise elements higher than their natural starting point.</p>
+                     <pre>
                         <code>    
-                            .card-header { 
-                                position:relative; 
-                                margin-top: -20px; 
-                             }      
-                        </code>
+                 .card-header { 
+                    position:relative; 
+                    margin-top: -20px; 
+                     }      
+     </code>
+                     </pre>
                     </section>
 
     </main>
